# LambdaCalculusTools

./: .gitignore  CHANGELOG.md  LICENSE  README-ZH.md  README.md  boot.lam  build.sh  lambda-calculus-tools.cabal  run.sh  test.lam
app/: BaseException.hs  DeBruijnLambdaTerm.hs  KrivineMachine.hs  LambdaCubeReduction.hs  LambdaCubeTerm.hs  LambdaCubeType.hs  LambdaParser.hs  LambdaReduction.hs  LambdaTerm.hs  LambdaTermTools.hs  Main.hs  OtherTools.hs  SimpleCalculator.hs  SimpleKrivineMachineRunner.hs  SimpleLang.hs  SimpleType.hs  SimpleTypedLambdaTerm.hs
app/LambdaCube/: LambdaCubeReduction.hs
app/SimpleTypedLambdaCalculus/: SimpleTypedLambdaTerm.hs
app/UntypedLambdaCalculus/: DeBruijnLambdaTerm.hs  KrivineMachine.hs  LambdaReduction.hs  LambdaTerm.hs
develop-tools/: binarystrtobyte.c  build.sh  bytetobinarystr.c
lam/: base.lam  bits-math.lam  bits.lam  boot.lam  lib.lam  main.lam  test.lam  wrapper.lam
lam-examples/: hello-world.lam  helloworld100times.lam  reducation.lam  rot13.lam
src/LambdaCube/: LambdaCubeTerm.hs  LambdaCubeType.hs
src/SimpleTypedLambdaCalculus/: SimpleType.hs
src/UntypedLambdaCalculus/: LambdaTerm.hs  LambdaTermTools.hs  LazyKrivineMachine.hs
temporary-code/: LambdaCubeMain.hs  SimpleTypedLambdaTermMain.hs  ToCPS.hs
